--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,27 @@
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.j2eedt.core.MYECLIPSE_JAVAEE_6_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/hibernate-3.6.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/hibernate-validator-3.1.ga.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/hibernate-validator-4.0.2.GA.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate/validation-api-1.0.0.GA.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/guava-r07.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/javassist-3.14.0.GA.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/jstl-api-1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/jstl-impl-1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/mirror-1.5.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/objenesis-1.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/ognl-2.7.3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/paranamer-2.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/scannotation-1.0.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/vraptor/xstream-1.3.1.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
